--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ca.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Deixeu anar un fitxer LAR a importar
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Ja existeix una estructura d'associació de dades dinàmiques amb clau {0}.
 enabled-on-private-pages=Activat per pàgines privades
 enabled-on-public-pages=Activat per pàgines públiques
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Plantilla d'importació/exportació (Automatic Translation)
 export-import-portlet-permissions-help=Si se selecciona aquesta opció, els permisos asignats al mòdul de portal exportat seran incluïts.
 export-import-theme-settings-help=Quan se selecciona per exportar, l'esquema i els colors del tema escollits per al lloc estan inclosos en els arxius LAR resultants. Quan se selecciona per importar, la configuració i l'esquema de colors del tema són importats i totes les pàgines estan configurades per usar-les.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Aquesta versió es pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=No s'ha pogut activa l'entorn de proves remot en el lloc amb ID {0}. Només es pot activar l'entor de proves remot d'un lloc global a un altre lloc global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=No s'ha pogut activar l'entorn de proves remot en el lloc web amb l'ID {0}. L'entorn Live del lloc ha de ser diferent al de l'entorn de proves.
 unable-to-execute-process-x=No s'ha pogut executar el procés ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Publicació programada sense títol
 update-data=Actualitza les dades
 update-page-variation=Actualitza la variació de la pàgina
