--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_de.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=LAR-Datei für den Import hierher ziehen
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Die Struktur für dynamische Datenzuordnungen mit dem Schlüssel {0} existiert bereits.
 enabled-on-private-pages=Auf private Seiten aktiviert
 enabled-on-public-pages=Auf öffentlichen Seiten aktiviert
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Ist diese Option ausgewählt, werden Berechtigungen für das exportierte Portletfenster berücksichtigt.
 export-import-theme-settings-help=Ist diese Option während eines Exports aktiviert, werden das für die Site gewählte Theme und Farbschema in die resultierende LAR-Datei einbezogen. Ist diese Option während eines Imports aktiviert, werden Einstellungen zu Theme und Farbschema importiert und für alle Seiten genutzt.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Diese Version wird ve
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Remotestaging kann auf der Site mit der ID {0} nicht aktiviert werden. Das Staging von globalen Sites ist nur mit anderen globalen Sites möglich.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Remotestaging kann auf der Site mit der ID {0} nicht aktiviert werden. Die Remote-Livesite muss sich von der Stagingsite unterscheiden.
 unable-to-execute-process-x=Prozess kann nicht ausgeführt werden ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Unbenannte geplante Publikation
 update-data=Daten aktualisieren
 update-page-variation=Seitenvariation aktualisieren
