--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_es.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Arrastre un archivo LAR aquí para importarlo
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Ya existe una estructura de mapeo de datos dinámicos con clave {0}.
 enabled-on-private-pages=Habilitado en páginas privadas.
 enabled-on-public-pages=Habilitado en páginas públicas
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Plantilla de importación/exportación (Automatic Translation)
 export-import-portlet-permissions-help=Si esto es seleccionado, los permisos dados a la ventana del portlet exportado serán incluidos.
 export-import-theme-settings-help=Cuando sean seleccionados en la exportación, el tema y el esquema de colores escogidos para el sitio serán incluidos en los archivos LAR resultantes. Cuando sean seleccionados en la importación, las configuraciones del tema y esquema de colores serán importados y todas las páginas serán configuradas para utilizarlos.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Esta versión se publ
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=No se puede activar la representación a distancia en el lugar con ID {0}. El sitio global solo puede ser representado en otro sitio global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=No se pudo activar staging remoto en el sitio con identificador {0}. El sitio live remoto ha de ser diferente del sitio de staging.
 unable-to-execute-process-x=No es posible ejecutar el proceso ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Publicación programada sin título
 update-data=Modificar los datos
 update-page-variation=Modificar las variantes de página
