--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fi.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Siirrä LAR tiedosto tähän, sisään tuontia va
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynaamisten tietolistojen rakenteen avain {0} on jo olemassa.
 enabled-on-private-pages=Ota käyttöön jäsen sivuilla
 enabled-on-public-pages=Ota käyttöön julkisilla sivuilla
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Tämän ollessa valittu, käyttöoikeudet, mitkä liittyvät ulos vietyyn portlet ikkunaan sisällytetään.
 export-import-theme-settings-help=Tämän ollessa valittuna, sivustolle valittu teema ja väriteema sisällytetään LAR tiedostoon. Sen ollessa valittuna sisään tuonnissa, teema ja väriteema asetukset tuodaan ja kaikki asetetaan käyttämään niitä.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Tämä versio tullaan
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Etäjulkaisua ei voi kytkeä päälle sivustolle ID:llä {0}. Gloal sivusto voidaan vaiheistaa vain toisen global sivuston kanssa.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Etävalmistelua sivustolla tunnuksella {0} ei voida aktivoida. Live-etäsivuston on oltava eri kuin valmistelusivusto.
 unable-to-execute-process-x=Prosessia ({0}) ei voida suorittaa.
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Nimetön ajoitettu julkaisu
 update-data=Päivitä tiedot
 update-page-variation=Päivitä sivumuunnelma
