--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hu.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Húzz ide egy importálandó LAR fájlt.
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=A Dinamikus adat mapping struktúra a {0} struktúra kulccsal már létezik.
 enabled-on-private-pages=Privát oldalakon engedélyezve
 enabled-on-public-pages=Nyilvános oldalakon engedélyezve
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Adatexportálási /-importálási sablon (Automatic Translation)
 export-import-portlet-permissions-help=Ha ez be van jelölve, az exportált portlet ablakhoz tartozó jogosultságok is bele lesznek foglalva.
 export-import-theme-settings-help=Exportnál kiválasztva, a webhelyhez választott téma és színséma benne lesz a létrejövő LAR fájlban. Importnál kiválasztva a téma és színséma beállítások importálva lesznek és az összes oldal be lesz arra állítva, hogy használja őket.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Ez a változat akkor 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Nem lehetséges aktiválni a távoli staginget a webhelyen ezzel az azonosítóval: {0}. A globális webhely csak másik globális helyre stage-elhető.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Nem lehet aktiválni a távoli staginget a(z) {0} azonosítójú webhelyen. A távoli élő webhely nem lehet ugyanaz, mint a stage webhely.
 unable-to-execute-process-x=Nem lehet a folyamatot végrehajtani ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Cím nélküli ütemezett publikáció
 update-data=Adat frissítése
 update-page-variation=Oldalváltozat frissítése
