--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=LAR-bestand hier neerzetten om te importeren
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Er bestaat al een dynamische-datamappingstructuur met sleutel {0}.
 enabled-on-private-pages=Geactiveerd op privé pagina's
 enabled-on-public-pages=Gactiveerd op publieke pagina's
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Als deze optie is geselecteerd zullen de rechten die zijn toegekend aan de het geëxporteerde portletscherm worden meegenomen.
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Deze versie wordt gep
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Het is niet mogelijk om extern gefaseerde publicatie te activeren op de site met ID {0}. Een globale site kan alleen gefaseerd gepubliceerd worden naar een andere globale site.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Fout bij het activeren van fasering op afstand op site met ID {0}. De site op afstand moet verschillend van de fasesite.
 unable-to-execute-process-x=Het is niet mogelijk om het proces uit te voeren ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Naamloze geplande publicatie
 update-data=Data bijwerken
 update-page-variation=Paginavariant bijwerken
