--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_CN.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=导入LAR文件
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=结构key为{0}的动态数据映射结构已经存在。
 enabled-on-private-pages=在个人页面上启用
 enabled-on-public-pages=在公共页面上启用
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=导出/导入模板 (Automatic Translation)
 export-import-portlet-permissions-help=如果选中此项，分配给导出Portlet窗口的权限也包括在内。
 export-import-theme-settings-help=当选择导出时，为该站点选择的主题和配色方案包含在生成的LAR文件中。当选择导入时，主题和配色方案设置导入并且配置到所有页面。
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=当<em>{0}</em>被发
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=在站点ID{0}不能激活远程staging。全球站点只能被另一个全球站点stage。
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=无法使用账号{0}现场激活远程Staging。远程Live网站必须与Stage网站不同。
 unable-to-execute-process-x=无法执行过程。({0})
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=无标题的日程发布
 update-data=更新数据
 update-page-variation=更新页面分支
