--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fr.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Déposer un fichier LAR pour import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Une structure de correspondance de données dynamique avec la clé {0} existe déjà.
 enabled-on-private-pages=Activé sur les pages privées
 enabled-on-public-pages=Activé sur les pages publiques.
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Exportation/importation du modèle (Automatic Translation)
 export-import-portlet-permissions-help=Si coché, les permissions associée à la portlet exportée sont incluses.
 export-import-theme-settings-help=Quand sélectionné pour export, le thème et le modèle de couleurs for le site sont inclus dans les fichiers LAR final. Quand sélectionné pour import, les paramètres du thème et du modèle de couleur sont importés et toutes les pages sont configurées pour les utiliser.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Cette version sera pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Impossible d'activer le remote staging sur le site avec ID {0}. Le site Global peut seulement être le staging d'un autre site Global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Impossible d'activer la mise en scène à distance sur le site avec l'ID {0}. Le site distant en direct doit être différent du site de la scène.
 unable-to-execute-process-x=Impossible d'exécuter le processus ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Publication programmée sans titre
 update-data=Mettre à jour la donnée
 update-page-variation=Mettre à jour les variantes de page
