--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ko.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=가져오기에 고 맙 다 파일을 삭제 (Aut
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=개인 페이지에서 사용할 수 (Automatic Translation)
 enabled-on-public-pages=공용 페이지에 사용 (Automatic Translation)
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=내보내기/가져오기 서식 파일 (Automatic Translation)
 export-import-portlet-permissions-help=이 선택 하는 경우 내보낸된 포틀릿 창에 할당 된 사용 권한이 포함 됩니다. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=This version will be 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=예약 된 게시 제목된 (Automatic Translation)
 update-data=업데이트 데이터 (Automatic Translation)
 update-page-variation=Add Page Variation
