--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nb.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Slipp en LAR-fil her for import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamisk data liste struktur med nøkkel {0} finnes allerede.
 enabled-on-private-pages=Aktivert på Private sider (Automatic Translation)
 enabled-on-public-pages=Aktivert på offentlige sider (Automatic Translation)
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Malen for eksport/Import (Automatic Translation)
 export-import-portlet-permissions-help=Hvis dette er valgt, inkluderes tillatelser som er tildelt for vinduet eksporterte portleten. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Denne versjonen blir 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Kan ikke aktivere fjerntjener publisering på nettstedet med ID {0}. Globale nettsteder kan bare publiseres til andre globale nettsteder.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Kan ikke kjøre prosessen ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Untitled planlagte publikasjon (Automatic Translation)
 update-data=Oppdater data
 update-page-variation=Oppdater sidevariant
