--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pl.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Upuść tu plik LAR, by go zaimportować
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Struktura dynamicznego mapowania danych z kluczem {0} już istnieje.
 enabled-on-private-pages=Włączone na prywatnych stronach (Automatic Translation)
 enabled-on-public-pages=Włączone na publicznych stronach (Automatic Translation)
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Szablon eksportu/importu (Automatic Translation)
 export-import-portlet-permissions-help=Jeśli to pole jest zaznaczone, uprawnienia przypisane dla okna wywożonych portletu są uwzględniane. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Ta wersja zostanie op
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Nie można uruchomić procesu ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Bez tytułu publikacji zaplanowane (Automatic Translation)
 update-data=Aktualizuj dane
 update-page-variation=Aktualizuj wariant strony
