--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pt_BR.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Arraste e solte um arquivo LAR para importar
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=A estrutura de mapeamento de dados dinâmicos com a chave {0} já existe.
 enabled-on-private-pages=Habilitado em Páginas Privadas
 enabled-on-public-pages=Habilitado em Páginas Públicas
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Modelo de exportação/importação (Automatic Translation)
 export-import-portlet-permissions-help=Se isto for marcado, as permissões dadas à janela do portlet exportado serão incluídas.
 export-import-theme-settings-help=Quando selecionados na exportação, o tema e o esquema de cores escolhidos para o site são incluídos nos arquivos LAR resultantes. Quando selecionado na importação, as configurações de tema e esquema de cores são importadas e todas as páginas são configuradas para utilizá-las.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Esta versão será pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Não é possível ativar staging remoto no site com ID {0}.O staging de um site global só pode ser feito para outro site global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Não foi possível ativar o staging remoto no site com ID {0}. O site live remoto deve ser diferente do site em staging.
 unable-to-execute-process-x=Não é possível executar o processo ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Publicação Agendada sem Título
 update-data=Atualizar dados
 update-page-variation=Atualizar variação da página
