--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sk.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Presuňte LAR súbor na import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Mapovacia štruktúra s kľúčom {0} už existuje.
 enabled-on-private-pages=Povolené na súkromných stránkach
 enabled-on-public-pages=Povolené na verejných stránkach
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Export/Import šablóny (Automatic Translation)
 export-import-portlet-permissions-help=Ak je toto zaškrtnuté, oprávnenie priradené pre exportované okno portletu budú zahrnuté.
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=Táto verzia bude pub
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Nedá sa aktivovať vzdialená príprava na sídle s ID {0}. Globálne sídlo môže byť pripravované len do iného globálneho sídla.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Nepodarilo sa aktivovať prípravné prostredie na sídle s ID {0}. Vzdialené produkčné sídlo musí byť rozdielne od prípravného sídla.
 unable-to-execute-process-x=Nemôžem vykonať proces ({0}).
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Nepomenované vzdialené publikovanie
 update-data=Aktualizovať údaje
 update-page-variation=Aktualizovať variant stránky
