--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sv.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=Drop a LAR File to Import (Automatic Copy)
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=Aktiverat på privata sidor (Automatic Translation)
 enabled-on-public-pages=Aktiverat på offentliga sidor (Automatic Translation)
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Om här är markerat inkluderas de behörigheter som tilldelats för exporterade portlet-fönstret. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=This version will be 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=Untitled Scheduled Publication (Automatic Copy)
 update-data=Update Data (Automatic Copy)
 update-page-variation=Uppdatera sidvariant
