--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_TW.properties
@@ -41,7 +41,6 @@ drop-a-lar-file-here-to-import=放一個LAR檔以上傳
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=有結構鍵值 {0} 的動態資料對映結構已經存在。
 enabled-on-private-pages=啟用在私密頁面
 enabled-on-public-pages=啟用在公開頁面
-error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
 export-import-configuration=匯出/導入範本 (Automatic Translation)
 export-import-portlet-permissions-help=如果這被核選，指派給匯入Portlet視窗的權限將會被包含。
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
@@ -164,6 +163,7 @@ this-version-will-be-published-when-x-is-published-to-live=當<em>{0}</em>出版
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=不能在ID {0} 的站台啟用遠端階段。全域站台只能設定階段於其他全域站台。
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=無法啟用遠端階段中在ID {0} 的站台。遠端Live站台必須不同於階段站台。
 unable-to-execute-process-x=不能執行流程 ({0})。
+unable-to-find-x=Uanble to find {0}. (Automatic Copy)
 untitled-scheduled-publication=無標題的已排程出版
 update-data=更新資料
 update-page-variation=更新頁面變更
